# rTest

./: .DESCRIPTION.swp  .Rbuildignore  .gitignore  .gitmodules  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac  makeCluster.c  setup.R
.github/workflows/: R-CMD-check.yaml
R/: Makefile.bak  RcppExports.R  helloWorld.R  instrument.R.bak  makePSOCKcluster.R  otf2_archive.R  otf2_evtWriter.R  otf2_globalDefWriter.R  rTest.R  rTrace.R  r_event_instrumentation_loggers.R  r_exception_list.R  r_fork_functions.R  r_instrument.R  r_instrument_hl.R  r_instrument_ll.R  r_utils.R  test.R  test.cpp  test__ports.R
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
man/: assign_regionRef_array_master.Rd  assign_regionRef_array_slave.Rd  body_cluster_function.Rd  body_default_function.Rd  body_end_cluster_function.Rd  body_end_fork_function.Rd  close_EvtWriterSocket_client.Rd  create_dataframe.Rd  create_eventlog.Rd  create_otf2_event.Rd  define_otf2_event_client.Rd  define_otf2_regionRef_client.Rd  disable_instrumentation.Rd  enable_instrumentation.Rd  epoch_time_client.Rd  event_create.Rd  evtWriter_MeasurementOnOff.Rd  evtWriter_MeasurementOnOff_client.Rd  evtWriter_Write.Rd  evtWriter_Write_client.Rd  evtWriter_proc_client.Rd  finalize_Archive.Rd  finalize_EvtWriter.Rd  finalize_EvtWriter_client.Rd  finalize_GlobalDefWriter.Rd  finalize_GlobalDefWriter_client.Rd  finalize_otf2_client.Rd  finalize_sync_client.Rd  finalize_zmq_client.Rd  free_regionRef_array_slave.Rd  get_end_cluster_wrapper_expression.Rd  get_end_fork_function_list.Rd  get_end_fork_wrapper_expression.Rd  get_env.Rd  get_fork_function_list.Rd  get_fork_wrapper_expression.Rd  get_function_exception_list.Rd  get_function_index.Rd  get_function_list.Rd  get_function_methods.Rd  (+143 more)
src/: Makevars  Makevars.am  Makevars.in  RcppExports.cpp  config.h.in  makePSOCKcluster.cpp  meas.h  meastypes.h  papiinf.cc  papiinf.h  perfinf.cc  pmpmeas-api.c  pmpmeas-api.h  pmpmeas.cc  pmpmeas.h  rTest.cpp  rTest.cpp.bak  rTrace.cpp  rTrace.h  utils.h
tests/: testthat.R
tests/testthat/: test-example.R  test-instrumentation.R  test-tryInstrumentation.R  test-zeromq.R
tools/autom4te.cache/: requests  traces.0
